		  History of changes to python-icat
		  =================================

* Version 0.8.0 (not yet released)

** New features

 + Add type conversion of configuration variables.

 + Add substituting the values of configuration variables in other
   variables.

 + Add another derived configuration variable configDir.

 + Add /etc/icat and ~/.config/icat to the default search path for the
   config file.

 + Add icatexport.py and icatimport.py example scripts that use the
   corresponding calls to the ICAT RESTful interface to dump and
   restore the ICAT content.

** Incompatible changes

 + The constructor of ICATError and the translateError() function are
   now able to construct exceptions based on a dict such as those
   returend by the ICAT RESTful interface in case of an error.

   Unified handling of errors raised from the ICAT and the IDS server.
   As a consequence, the exception class hierarchy has been reviewed,
   with a somewhat more clear separation of exceptions raised by
   other libraries, exceptions raised by the server, and exceptions
   raised by python-icat respectively.

   If you put assumptions on the exception hierarchy in your code,
   this might need a review.  In particular, IDSResponseError is not
   derived from IDSError any more.  IDSServerError has been removed.

** Bug fixes and minor changes

 + The Query class now checks the attributes referenced in conditions
   and includes for validity.

 + Fix a regression introduced with version 0.7.0 that caused
   non-ASCII characters in queries not to work.

 + Fix ICATError and IDSError to gracefully deal with non-ASCII
   characters in error messages.  Add a common abstract base class
   ICATException that cares about this.

 + Fix: the string representation operator   str  () of Query should
   not modify the query object.

 + Cosmetic improvement in the formal representation operator
     repr  () of Query.

* Version 0.7.0 (2015-02-11)

** New features
